0.06

0.05 2024-03-15T22:25:49+01:00
 - Cleanup files in tmp immediately.

0.04 2024-02-10T10:40:24+01:00
 - Add -f option for print files in matching mode.
 - Fix -i option in case of exit code different than 0.
 - Update copyright years.

0.03 2023-08-18T17:36:05+02:00
 - Add -i option for ignoring of errors.

0.02 2023-05-23T11:59:56+02:00
 - Add description about tool to doc.
 - Add option for match string.
 - Fix example in doc.
 - Fix test dependencies.
 - Update Module::Install to 1.21 version.

0.01 2023-04-26T23:06:30+02:00
 - First version.